--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INTRO DOM</title>
+    <!--<title>INTRO DOM</title>-->
+    <title>TODO LIST</title>
 </head>
 <body>
-    <P id="text">Intro a DOM</P>
+    <form id="todo-from">
+        <input type="text" id="todo"/>
+        <input type="submit" value="Enviar"/>
+
+    </form>
+    <ul id ="todo-list"></ul>
+    <!--<P id="text">Intro a DOM</P>-->
     
 </body>
 <script src="main.js">
